--- a/css/reweyou.css
+++ b/css/reweyou.css
@@ -419,12 +419,24 @@ a.feed-main-item {
 
 div.feed-image {
 	display: block;
+	width: 100%;
+    height: 200px;
+    overflow: hidden;
+    position: relative;
 }
 
 div.feed-image img {
-	max-width: 100%;
-    height: auto;
-    background-size: cover;
+	 position: absolute;
+    margin: auto; 
+    min-height: 100%;
+    min-width: 100%;
+
+    /* For the following settings we set 100%, but it can be higher if needed 
+    See the answer's update */
+    left: -100%;
+    right: -100%;
+    top: -100%;
+    bottom: -100%;
     opacity: 1;
     -moz-transition: all 1s;
     -webkit-transition: all 1s;
@@ -636,7 +648,7 @@ div.points{
 	
 	.search input {
 		height: 24px;
-		background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 8px 3px no-repeat;
+		background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 10px 5px no-repeat;
 	}
   
  div.logo-and-text {
@@ -720,7 +732,7 @@ div.points{
 	
 	.search input {
 		height: 24px;
-		background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 8px 3px no-repeat;
+		background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 10px 5px no-repeat;
 	}
 .google-play {
 	margin-left: 3vw;
@@ -888,15 +900,15 @@ div.nav3 {
 		font-size: 15px;
 		margin-bottom: 5px;
 		margin-top: 0;
-		height: 28px;
+		height: 33px;
 		margin-left: 2vw;
 		margin-right: 2vw;
 		padding-left: 0;
 	}
 	
 	.search input {
-		height: 20px;
-		background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 8px 3px no-repeat;
+		height: 24px;
+		background: white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 10px 5px no-repeat;
 	}
   
  div.logo-and-text {
