--- a/css/reweyou.css
+++ b/css/reweyou.css
@@ -448,7 +448,7 @@ div.feed-card .feed-supporting-text {
     color: #000;
 }
 
-div.feed-card .feed-supporting-text span .tag {
+ .tag {
 	margin: 1.5% 0% 1.5% 0%;
     font-size: 1.3em;
     font-weight: 600;
