--- a/css/reweyou.css
+++ b/css/reweyou.css
@@ -420,23 +420,14 @@ a.feed-main-item {
 div.feed-image {
 	display: block;
 	width: 100%;
-    height: 200px;
-    overflow: hidden;
-    position: relative;
+	overflow: hidden;
 }
 
 div.feed-image img {
-	 position: absolute;
-    margin: auto; 
-    min-height: 100%;
-    min-width: 100%;
-
-    /* For the following settings we set 100%, but it can be higher if needed 
-    See the answer's update */
-    left: -100%;
-    right: -100%;
-    top: -100%;
-    bottom: -100%;
+	
+    max-width: 100%;
+    height: auto;
+    background-size: cover;
     opacity: 1;
     -moz-transition: all 1s;
     -webkit-transition: all 1s;
